Scanner REST/jackson klasser som også flyttes til andre moduler enn webapp