@@ -1,18 +1,9 @@
-package no.nav.foreldrepenger.web.app;
+package no.nav.foreldrepenger.web.app.rest;
 
-import java.util.Collections;
+import java.util.Collection;
 import java.util.HashSet;
 import java.util.Set;
 
-import javax.ws.rs.ApplicationPath;
-import javax.ws.rs.core.Application;
-
-import io.swagger.jaxrs.config.BeanConfig;
-import no.nav.foreldrepenger.web.app.exceptions.ConstraintViolationMapper;
-import no.nav.foreldrepenger.web.app.exceptions.GeneralRestExceptionMapper;
-import no.nav.foreldrepenger.web.app.exceptions.JsonMappingExceptionMapper;
-import no.nav.foreldrepenger.web.app.exceptions.JsonParseExceptionMapper;
-import no.nav.foreldrepenger.web.app.jackson.JacksonJsonConfig;
 import no.nav.foreldrepenger.web.app.tjenester.batch.BatchRestTjeneste;
 import no.nav.foreldrepenger.web.app.tjenester.behandling.BehandlingRestTjeneste;
 import no.nav.foreldrepenger.web.app.tjenester.behandling.aksjonspunkt.AksjonspunktRestTjeneste;
@@ -36,38 +27,9 @@ import no.nav.foreldrepenger.web.app.tjenester.saksbehandler.FeatureToggleRestTj
 import no.nav.foreldrepenger.web.app.tjenester.saksbehandler.NavAnsattRestTjeneste;
 import no.nav.vedtak.felles.prosesstask.rest.ProsessTaskRestTjeneste;
 
+class RestImplementationClasses {
 
-@ApplicationPath(ApplicationConfig.API_URI)
-public class ApplicationConfig extends Application {
-
-    public static final String API_URI = "/api";
-
-    public ApplicationConfig() {
-        BeanConfig beanConfig = new BeanConfig();
-        beanConfig.setVersion("1.0");
-        if (utviklingServer()) {
-            beanConfig.setSchemes(new String[]{"http"});
-        } else {
-            beanConfig.setSchemes(new String[]{"https"});
-        }
-        beanConfig.setBasePath("/fpsak/api");
-        beanConfig.setResourcePackage("no.nav");
-        beanConfig.setTitle("Vedtaksløsningen - Engangsstønad");
-        beanConfig.setDescription("REST grensesnitt for Vedtaksløsningen.");
-        beanConfig.setScan(true);
-    }
-
-    /**
-     * Finner ut av om vi kjører utviklingsserver. Settes i JettyDevServer#konfigurerMiljø()
-     *
-     * @return true dersom utviklingsserver.
-     */
-    private boolean utviklingServer() {
-        return Boolean.getBoolean("develop-local");
-    }
-
-    @Override
-    public Set<Class<?>> getClasses() {
+    Collection<Class<?>> getImplementationClasses() {
         Set<Class<?>> classes = new HashSet<>();
         classes.add(FagsakRestTjeneste.class);
         classes.add(NavAnsattRestTjeneste.class);
@@ -91,16 +53,6 @@ public class ApplicationConfig extends Application {
         classes.add(VilkårRestTjeneste.class);
         classes.add(IntegrasjonstatusRestTjeneste.class);
         classes.add(BrevRestTjeneste.class);
-
-        classes.add(io.swagger.jaxrs.listing.ApiListingResource.class);
-        classes.add(io.swagger.jaxrs.listing.SwaggerSerializers.class);
-
-        classes.add(ConstraintViolationMapper.class);
-        classes.add(JsonMappingExceptionMapper.class);
-        classes.add(JsonParseExceptionMapper.class);
-        classes.add(GeneralRestExceptionMapper.class);
-        classes.add(JacksonJsonConfig.class);
-
-        return Collections.unmodifiableSet(classes);
+        return Set.copyOf(classes);
     }
 }
